<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3984646">

    <TextView
        android:id="@+id/instructions3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:text="@string/instruction3"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/instructions2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="275dp"
        android:text="@string/instruction2"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/instructions1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:text="@string/instruction1"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:text="@string/instructions"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#000000"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/gameInfo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="450dp"
        android:text="@string/gameInfo3"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/gameInfo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="425dp"
        android:text="@string/gameInfo2"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/aboutUsHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/aboutUsHead"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/aboutUsBody"
        android:layout_width="290dp"
        android:layout_height="91dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:text="@string/aboutUsBody"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/gameInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:text="@string/gameInfo"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/gameInfo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400dp"
        android:text="@string/gameInfo1"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/mainMenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="500dp"
        android:text="@string/mainMenuButton"
        android:textColor="#000000"
        android:textSize="18sp" />

</RelativeLayout>