<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/start_background">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="monospace"
        android:text="@string/title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textColor="#000000" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="475dp"
        android:layout_centerHorizontal="true"
        android:text="@string/playButton"
        android:textColorLink="#FFFFFF"
        android:textSize="30sp" />

    <Button
        android:id="@+id/aboutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="550dp"
        android:layout_centerHorizontal="true"
        android:text="@string/aboutButton"
        android:textSize="30sp" />

</RelativeLayout>